; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_main.c_jsB_readline.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_main.c_jsB_readline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @jsB_readline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jsB_readline(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call i8* @readline(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i8* %4, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @js_pushnull(i32* %8)
  br label %23

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @js_pushstring(i32* %11, i8* %12)
  %14 = load i8*, i8** %3, align 8
  %15 = load i8, i8* %14, align 1
  %16 = icmp ne i8 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %10
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @add_history(i8* %18)
  br label %20

20:                                               ; preds = %17, %10
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @free(i8* %21)
  br label %23

23:                                               ; preds = %20, %7
  ret void
}

declare dso_local i8* @readline(i8*) #1

declare dso_local i32 @js_pushnull(i32*) #1

declare dso_local i32 @js_pushstring(i32*, i8*) #1

declare dso_local i32 @add_history(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
